--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.ShoppingListActivity"></activity>
-        <activity android:name=".activities.AddShoppingListActivity"></activity>
-
+        <activity android:name=".activities.ShoppingListActivity" />
+        <activity android:name=".activities.AddShoppingListActivity" />
+        <activity
+            android:name=".activities.ListDetailsActivity"
+            android:label="@string/title_activity_list_details"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
