--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity
             android:name=".activities.ListDetailsActivity"
             android:label="@string/title_activity_list_details"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.CompletedListActivity"></activity>
     </application>
 
 </manifest>
