--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".activities.MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.ShoppingListActivity" />
-        <activity android:name=".activities.AddShoppingListActivity" />
+        <activity android:name=".activities.AddShoppingListActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity
             android:name=".activities.ListDetailsActivity"
             android:label="@string/title_activity_list_details"
