--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,13 @@
             <action android:name="com.google.firebase.MESSAGING_EVENT"/>
         </intent-filter>
         </service>
+
+        <receiver android:name=".broadcastReciver.AddFriendReciver">
+            <intent-filter>
+                <action android:name="YES_ACTION"/>
+                <action android:name="NO_ACTION"/>
+            </intent-filter>
+        </receiver>
         <meta-data
             android:name= "com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_person_add_black_24dp"
@@ -43,6 +50,7 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/default_notification_channel_id" />
+
     </application>
 
 </manifest>
